[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.25.0", features = [
  "sched",
  "fs",
  "mount",
  "process",
  "signal",
] }
io-uring = "0.5"
libc = "0.2.131"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
thiserror = "1.0.32"
